push footer to bottom regardless of page length

--- a/myapp/templates/base.html
+++ b/myapp/templates/base.html
@@ -30,16 +30,18 @@
                 {% block main %}{% endblock %}
             </div>
         </div>
-        <div id="footer-main" class="container-fluid">
-            <div class="row">
-                <div class="col-md-6">
-                    column
-                </div>
-                <div class="col-md-6">
-                    column
-                </div>
-                <div class="col align-middle" id="footer-bottom">
-                    <h3>Created by <a href="http://aaronkwilkinson.com">Aaron Wilkinson</a></h3>
+        <div id="footer-main">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-md-6">
+                        column
+                    </div>
+                    <div class="col-md-6">
+                        column
+                    </div>
+                    <div class="col align-middle" id="footer-bottom">
+                        <h3>Created by <a href="http://www.aaronkwilkinson.com">Aaron Wilkinson</a></h3>
+                    </div>
                 </div>
             </div>
         </div>
