change max-width for recipe grid

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -43,6 +43,10 @@ body {
     font-family: 'IBM Plex Mono', sans-serif;
 }
 
+.recipe-grid {
+    max-width: 960px;
+}
+
 .recipe-grid-item {
     padding: 40px;
     justify-content: center;
