formatting recipe page

--- a/myapp/templates/base.html
+++ b/myapp/templates/base.html
@@ -19,9 +19,9 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav ml-auto mr-auto">
-                    <li>menu 1</li>
-                    <li>menu item 2</li>
-                    <li>menu aa 3</li>
+                    <a href="/recipes"><li>Recipes</li></a>
+                    <a href="/test"><li>Test</li></a>
+                    <a href="/about"><li>About</li></a>
                 </ul>
             </div>
         </nav>
