--- a/myapp/templates/base.html
+++ b/myapp/templates/base.html
@@ -10,9 +10,10 @@
     </head>
     <body class="bootstrap-override">
         <div id="site-header">
-            <h1 id="site-header-title">The Joys of Cooking</h1>
+            <a href="/" id="site-header-title"><h1>The Joys of Cooking</h1></a>
             <h3>{% block pagetitle %}{% endblock %}</h3>
         </div>
+<!-- navbar toggle button not appearing -->
         <nav class="navbar navbar-expand-md navbar-inverse navbar-fixed-top">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
