--- a/myapp/templates/base.html
+++ b/myapp/templates/base.html
@@ -14,8 +14,8 @@
             <h3>{% block pagetitle %}{% endblock %}</h3>
         </div>
 <!-- navbar toggle button not appearing -->
-        <nav class="navbar navbar-expand-md navbar-inverse navbar-fixed-top">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+        <nav class="navbar navbar-expand-sm navbar-light bg-light navbar-fixed-top">
+            <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
