modifying home and recipe pages

--- a/myapp/templates/recipes.html
+++ b/myapp/templates/recipes.html
@@ -21,7 +21,7 @@ Recipes
             </div>
             <div class="col-md-6 recipe-grid-item">
                 <a href="">
-                    <figure>
+                    <figure class="background-darkened" >
                         <img src="static/img/salad.jpg" alt="pasta">
                         <figcaption>Tasty Salad</figcaption>
                     </figure>
