opacity of recipe tiles

--- a/myapp/templates/recipes.html
+++ b/myapp/templates/recipes.html
@@ -13,26 +13,26 @@ Recipes
         <div class="row">
             <div class="col-md-6 recipe-grid-item">
                 <a href="">
-                    <figure>
+                    <div class="background-darkened">
                         <img src="static/img/pasta.jpeg" alt="pasta">
-                        <figcaption>Creamy Pasta</figcaption>
-                    </figure>
+                    </div>
+                    <h4>Creamy Pasta</h4>
                 </a>
             </div>
             <div class="col-md-6 recipe-grid-item">
                 <a href="">
-                    <figure class="background-darkened" >
-                        <img src="static/img/salad.jpg" alt="pasta">
-                        <figcaption>Tasty Salad</figcaption>
-                    </figure>
+                    <div class="background-darkened">
+                        <img src="static/img/salad.jpg" alt="salad">
+                    </div>
+                    <h4>Tasty Salad</h4>
                 </a>
             </div>
             <div class="col-md-6 recipe-grid-item">
                 <a href="">
-                    <figure>
-                        <img src="static/img/steak.jpeg" alt="pasta">
-                        <figcaption>Delicious Steak</figcaption>
-                    </figure>
+                    <div class="background-darkened">
+                        <img src="static/img/steak.jpeg" alt="steak">
+                    </div>
+                    <h4>Juicy Steak</h4>
                 </a>
             </div>
         </div>
