add text to homepage

--- a/myapp/templates/home.html
+++ b/myapp/templates/home.html
@@ -10,37 +10,44 @@ Home
 
 {% block main %}
     <div class="container home-content">
-        <div>
-            Something about hello and the purpose
-        </div>
+        <h2>Welcome!</h2>
+        <p>
+            Cooking is not only about nourishing our bodies; it is so much more.
+        </p>
+        <ul>
+            <li>Through cooking we express our creativity.</li>
+            <li>Through cooking we show our love for those around us.</li>
+            <li>Through cooking we build community and continue our family traditions.</li>
+        </ul>
+        <p>
+            It is through cooking that we explore an integral part of other cultures, and in doing so create
+            delicious dishes to please the palatte.
+        </p>
         <div class="background-darkened">
             <div class="bgimg1">
-                background image here
+                <div class="caption">
+                    FOOD AS CULTURE
+                </div>
             </div>
         </div>
         <p>
-             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse gravida ipsum et lacus commodo consectetur. Praesent maximus risus orci, vitae faucibus lorem dapibus eget. Etiam eget ultrices mi. Cras vitae leo iaculis, luctus quam ac, vestibulum augue. In eu ligula velit. Vivamus massa dolor, auctor quis semper sagittis, vulputate vitae quam. Suspendisse pharetra euismod arcu pretium fringilla. Sed placerat in mauris vitae auctor. Donec sit amet augue et quam tincidunt sagittis. Integer eu tellus vitae nisi dapibus gravida. Integer non lobortis ligula. Integer tellus mi, semper ac venenatis a, tristique in lacus. Nullam diam est, consequat quis lacus in, tincidunt mollis dui.
-
-Mauris quis vestibulum odio. In in magna sit amet augue pharetra venenatis eget eu ligula. Aliquam tincidunt et turpis et placerat. Phasellus vitae massa quis odio blandit commodo tempor ut turpis. Duis tincidunt consequat ipsum id aliquet. Maecenas sollicitudin lobortis fermentum. Vivamus lacinia sem in magna interdum, in semper ex ullamcorper. Vivamus neque metus, suscipit condimentum lacus placerat, blandit finibus magna. Nullam tempus, urna nec mattis porta, neque tellus ullamcorper magna, a fermentum ipsum ipsum eu neque. Morbi tempor dapibus leo a ultricies. Sed facilisis dui vitae neque venenatis, vel consectetur dolor auctor. Maecenas finibus lorem et lorem facilisis consequat. Aliquam sed mauris sed turpis porta faucibus. Vivamus consectetur venenatis elit vitae posuere. Morbi quis tempor tortor. Donec interdum eros ac massa pulvinar, vel vestibulum risus dignissim.
-
-Ut dapibus ornare sapien, a interdum urna viverra et. Morbi tempor nisi massa. Cras non turpis ante. Donec turpis turpis, auctor sed auctor ut, elementum a sapien. Etiam euismod ipsum posuere, convallis augue consectetur, sodales sem. Vivamus sed tincidunt ipsum. Integer sed accumsan nulla.
-
-Sed condimentum porta tincidunt. Proin maximus mi et euismod consectetur. Mauris non tortor eleifend massa porta faucibus nec nec ligula. In id neque ac ipsum elementum placerat sit amet at nulla. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Cras malesuada a ante eget luctus. Nunc feugiat in lacus in mattis. Fusce id lorem in risus vehicula venenatis. Phasellus molestie lacus in orci aliquam, quis placerat massa efficitur. Morbi arcu ex, facilisis id arcu eu, condimentum congue mauris. Donec et tincidunt mi, sit amet pretium turpis. Suspendisse ut velit purus. Maecenas turpis metus, viverra porta mattis tempus, laoreet sit amet ligula.
-
-Integer vitae nulla risus. Pellentesque vestibulum suscipit massa vel eleifend. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nunc accumsan urna ipsum, vel faucibus ligula hendrerit ac. Vestibulum eget sapien tempus lacus ultricies feugiat. Suspendisse potenti. Interdum et malesuada fames ac ante ipsum primis in faucibus. Aliquam sit amet risus commodo, pretium orci sed, placerat tellus.
-
-Nulla bibendum metus quam, eu finibus lacus pellentesque quis. Integer aliquet nisl id lobortis vestibulum. In lectus mi, iaculis ut gravida eu, volutpat sollicitudin dolor. Cras pretium orci a turpis elementum dignissim. Donec luctus ex sapien, et vehicula sem feugiat in. Integer nulla nisl, ultrices vel pharetra quis, porttitor at ex. Vestibulum porta tempus feugiat. Phasellus lacinia augue vitae elit semper porttitor.
-
-In at arcu id orci aliquam ornare. Phasellus ac varius lacus, eu mollis eros. Ut ultricies magna eget lorem ornare, nec venenatis risus ultrices. In sit amet elit semper, feugiat orci ac, ultricies velit. Praesent sed eleifend nulla, vitae auctor massa. Suspendisse efficitur et enim ac suscipit. Sed ipsum diam, faucibus et nisl eu, viverra malesuada erat. Cras eget congue sapien. Fusce a tristique magna. Suspendisse id varius arcu, vel faucibus velit. Curabitur non mi at arcu commodo vestibulum. Vestibulum vel sagittis metus.
-
-Aenean vel dictum elit. Interdum et malesuada fames ac ante ipsum primis in faucibus. Donec tincidunt pharetra nisi, quis posuere ligula pellentesque vitae. Integer id dignissim augue. Nulla et interdum velit. Mauris id tincidunt turpis. Nunc auctor sagittis porta. Fusce eleifend ex enim. Nunc consectetur ut libero quis vehicula. Suspendisse potenti. Sed iaculis tellus eget lorem maximus, ut sollicitudin mi venenatis.
-
-Ut dictum, magna et vestibulum dictum, massa mauris bibendum nisl, a condimentum tortor ante sed arcu. Mauris mattis, lectus id rhoncus venenatis, lectus libero suscipit ante, quis suscipit odio ligula sed tortor. Nunc vitae eros non arcu posuere consectetur. Phasellus sodales lacus non arcu pharetra, vel fringilla lorem laoreet. Maecenas suscipit, nunc vitae blandit porta, purus quam maximus ipsum, id facilisis mauris nisi nec est. Aenean vel sollicitudin est, in varius enim. Nam rutrum leo sapien, sed lobortis ipsum lobortis sed. Sed sed sagittis magna. Vivamus ultricies ex ut lorem auctor suscipit. Curabitur aliquet arcu eget posuere malesuada. Nullam rhoncus leo nibh, a rhoncus quam pellentesque ac. Nunc interdum ipsum urna, sed efficitur nulla aliquam eleifend. Proin sed odio sit amet libero congue accumsan vitae ut lectus. Aliquam feugiat in lectus in gravida. Vivamus ornare tristique elit ut pretium.
-
-Sed facilisis ante bibendum suscipit ornare. Donec pellentesque, erat a ultricies condimentum, lacus arcu molestie ante, et tempus nisi turpis eget massa. Aliquam sed eros porttitor erat ornare posuere. Maecenas in metus tempus, ullamcorper mi sit amet, consectetur nisi. Curabitur malesuada in libero ac convallis. Curabitur euismod nisi aliquet mollis posuere. Ut rutrum auctor tortor, sit amet consectetur nunc feugiat sit amet. Aenean sapien ligula, pharetra a molestie non, pretium a sapien. Cras fringilla felis vel malesuada pellentesque. Morbi blandit dignissim libero ut tristique. Morbi ut lectus erat. Fusce arcu nisl, rhoncus vel lacinia porttitor, sagittis a eros. Curabitur vel eleifend purus, ac tristique ligula. Nullam aliquam lacus in semper auctor. Cras varius nunc vel urna aliquet posuere.
-
-Cras placerat massa ipsum, sit amet lobortis dui placerat vitae. Donec varius metus eu pretium venenatis. Etiam quis magna vel neque dignissim ornare. Aenean convallis sollicitudin finibus. Nulla ac tincidunt risus, maximus commodo augue. Nulla facilisi. Curabitur rhoncus aliquet mauris nec tincidunt. Donec eu mauris sed nibh scelerisque sodales eget eu arcu. Nullam vitae lacinia turpis, dictum maximus erat.
-
+            Using this website we hope that you will explore the dishes of cultures from around this planet.<br>
+            <br>
+            Some you will love and perhaps bring into your family as a new rotating dish.<br>
+            <br>
+            Some will fail to thrill and be forgotten.<br>
+            <br>
+            Some will turn out to be completely unappealing to your palatte.<br>
+            <br>
+            But all will be successes in the mission to introduce you to new culinary viewpoints!<br>
+            <br>
+        </p>
+        <p>
+            Regardless of each dish's outcome with you and yours, we hope you will continue on in your exploration
+            of the dishes made by your fellow humans across the globe.
+        </p>
+        <p>
+            -The Joys of Cooking team
         </p>
     </div>
 {% endblock %}
