--- a/static/css/style.css
+++ b/static/css/style.css
@@ -62,6 +62,10 @@ body {
     padding-top: 2em;
 }
 
+.home-content h2 {
+    margin-bottom: 1em;
+}
+
 .home-content ul {
     list-style: none;
 }
@@ -72,8 +76,8 @@ body {
 
 /* Parallax tutorial https://www.w3schools.com/howto/howto_css_parallax.asp */
 .bgimg1 {
-    background-image: url("../img/pizza.jpeg");
-    min-height: 400px;
+    background-image: url("../img/skillet.jpeg");
+    min-height: 500px;
 }
 
 .bgimg1, .bgimg2 {
@@ -82,7 +86,18 @@ body {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    
+}
+
+.caption {
+    position: absolute;
+    text-align: center;
+    left: 0;
+    top: calc(50% - 1em);
+    width: 100%;
+    color: white;
+    font-size: 2em;
+    font-weight: bold;
+    letter-spacing: .25em;
 }
 
 .recipe-grid, .home-content {
