--- a/static/css/style.css
+++ b/static/css/style.css
@@ -13,6 +13,16 @@ body {
     min-height: 100%;
     height: auto !important;
     font-size: 1.2em;
+    background-color: #F6F7F7;
+    color: #323740;
+}
+
+header {
+    background-color: #323740;
+    color: white;
+    outline: 1px solid white;
+    outline-offset: -10px;
+    padding: 10px;
 }
 
 .bootstrap-override .navbar-nav a:not(:last-child) {
@@ -24,7 +34,7 @@ body {
     padding-left: 2em;
     padding-right: 2em;
     width: 11em;
-    color: #323740;
+    color: white;
     text-decoration: none;
 }
 
@@ -36,12 +46,17 @@ body {
 
 .bootstrap-override .nav-bar {
     z-index: 900;
-    background-color: red;
+}
+
+.bootstrap-override .navbar-custom {
+    background-color: transparent !important;
 }
 
 .content {
-    border-top: 1px solid #3e4550;
     padding-bottom: 100px;
+    max-width: 80%;
+    margin: auto;
+    background-color: #FEFFFF;
 }
 
 #site-header {
@@ -51,7 +66,7 @@ body {
 .bootstrap-override #site-header-title h1 {
     font-family: 'IBM Plex Mono', sans-serif;
     font-size: 4rem !important;
-    color: #323740;
+    color: white;
 }
 
 .bootstrap-override #site-header-title {
