create about template and rearrange CSS

--- a/myapp/templates/base.html
+++ b/myapp/templates/base.html
@@ -5,16 +5,16 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-        <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono|Open+Sans|Raleway" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono|Sacramento|Open+Sans|Raleway" rel="stylesheet">
         <link rel="stylesheet" href="static/css/style.css" type="text/css">
     </head>
     <body class="bootstrap-override">
         <header>
             <div id="site-header">
-                <a href="/" id="site-header-title"><h1>The Joys of Cooking</h1></a>
+                <a href="/" id="site-header-title"><h1>The <i><span class="joys">Joys</span></i> of Cooking</h1></a>
                 <h3>{% block pagetitle %}{% endblock %}</h3>
             </div>
-            <nav class="navbar navbar-expand-sm navbar-light bg-light navbar-fixed-top navbar-custom">
+            <nav class="navbar navbar-expand-sm navbar-dark bg-light navbar-fixed-top navbar-custom">
                 <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
