--- a/myapp/templates/home.html
+++ b/myapp/templates/home.html
@@ -47,7 +47,7 @@ Home
             of the dishes made by your fellow humans across the globe.
         </p>
         <p>
-            -The Joys of Cooking team
+            -The <i><span class="joys">Joys</span></i> of Cooking team
         </p>
     </div>
 {% endblock %}
