formatting base.html

--- a/myapp/templates/base.html
+++ b/myapp/templates/base.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-        <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono|Sacramento|Open+Sans|Raleway" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono|Sacramento|Open+Sans:300,400|Raleway" rel="stylesheet">
         <link rel="stylesheet" href="static/css/style.css" type="text/css">
     </head>
     <body class="bootstrap-override">
@@ -34,14 +34,20 @@
         </div>
         <div id="footer-main">
             <div class="container-fluid">
-                <div class="row">
-                    <div class="col-md-6">
-                        column
+                <div class="row justify-content-center">
+                    <div class="col-md-3">
+                        <ul>
+                            <li>Contact</li>
+                            <li>Another thing</li>
+                        </ul>
                     </div>
-                    <div class="col-md-6">
-                        column
+                    <div class="col-md-3">
+                        <ul>
+                            <li>Here's something</li>
+                            <li>Other</li>
+                        </ul>
                     </div>
-                    <div class="col align-middle" id="footer-bottom">
+                    <div class="col-12 align-middle" id="footer-bottom">
                         <h3>Created by <a href="http://www.aaronkwilkinson.com">Aaron Wilkinson</a></h3>
                     </div>
                 </div>
