--- a/static/css/style.css
+++ b/static/css/style.css
@@ -31,8 +31,8 @@ header {
 
 .bootstrap-override .navbar-nav a {
     text-align: center;
-    padding-left: 2em;
-    padding-right: 2em;
+    /*padding-left: 2em;*/
+    /*padding-right: 2em;*/
     width: 11em;
     color: white;
     text-decoration: underline #FF3547;
@@ -190,7 +190,16 @@ https://stackoverflow.com/questions/19638151/css-opacity-affecting-sibling-image
     bottom: 0;
     background-color: #3e4550;
     color: white;
-    font-size: .8em;
+    font-size: .75em;
+    font-weight: 100;
+}
+
+#footer-main ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    padding-left: 5em;
+    text-align: left;
 }
 
 #footer-bottom {
@@ -202,12 +211,23 @@ https://stackoverflow.com/questions/19638151/css-opacity-affecting-sibling-image
 #footer-bottom h3 {
     font-size: .8em;
     margin: .5em auto;
+    font-weight: 300;
 }
 
 #footer-bottom a {
     color: white;
     text-decoration: none;
     font-size: 1.15em;
+    font-weight: 300;
+}
+
+@media only screen and (max-width: 767px) {
+    #footer-main ul {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+        text-align: center;
+    }
 }
 
 @media only screen and (max-width: 576px) {
