--- a/myapp/templates/home.html
+++ b/myapp/templates/home.html
@@ -23,9 +23,8 @@ Home
             It is through cooking that we explore an integral part of other cultures, and in doing so create
             delicious dishes to please the palatte.
         </p>
-        <div class="background-darkened">
-            <div class="bgimg1">
-            </div>
+        <div class="img-container">
+            <img class="bgimg1 img-fluid" src="static/img/skillet.jpeg" alt="skillet">
             <div class="caption">
                 FOOD AS CULTURE
             </div>
@@ -40,7 +39,6 @@ Home
             Some will turn out to be completely unappealing to your palatte.<br>
             <br>
             But all will be successes in the mission to introduce you to new culinary viewpoints!<br>
-            <br>
         </p>
         <p>
             Regardless of each dish's outcome with you and yours, we hope you will continue on in your exploration
