--- a/myapp/templates/base.html
+++ b/myapp/templates/base.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-        <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono|Sacramento|Open+Sans:300,400|Raleway" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono|Sacramento|Open+Sans:300,400|Raleway:200,400,700" rel="stylesheet">
         <link rel="stylesheet" href="static/css/style.css" type="text/css">
     </head>
     <body class="bootstrap-override">
