--- a/myapp/templates/base.html
+++ b/myapp/templates/base.html
@@ -27,17 +27,17 @@
                 </div>
             </nav>
         </header>
-        <div class="container-fluid">
-            <div class="content">
+        <div class="container-fluid content">
+            <!--<div class="content">-->
                 {% block main %}{% endblock %}
-            </div>
+            <!--</div>-->
         </div>
         <div id="footer-main">
             <div class="container-fluid">
                 <div class="row justify-content-center">
                     <div class="col-md-3">
                         <ul>
-                            <li>Contact</li>
+                            <li><a href="/contact">Contact</a></li>
                             <li>Another thing</li>
                         </ul>
                     </div>
