--- a/myapp/templates/contact.html
+++ b/myapp/templates/contact.html
@@ -16,10 +16,28 @@ Contact
             </div>
         </div>
         <form action="contact" method="post">
-            <input class="col-5" name="firstname" type="text" placeholder="First Name" required>
-            <input class="col-5" name="lastname" type="text" placeholder="Last Name" required>
-            <input name="email" type="email" placeholder="Email" required>
-            <textarea name="message" required></textarea>
+            <div class="form-row">
+                <div class="form-group col-md-6">
+                    <label for="firstname">First Name</label>
+                    <input class="form-control" id="firstname" name="firstname" type="text" placeholder="Enter first name" required>
+                </div>
+                <div class="form-group col-md-6">
+                    <label for"lastname">Last Name</label>
+                    <input class="form-control" id="lastname" name="lastname" type="text" placeholder="Enter last name" required>
+                </div>
+            </div>
+            <div class="form-row">
+                <div class="form-group col-12">
+                    <label for="email">Email Address</label>
+                    <input class="form-control" id="email" name="email" type="email" placeholder="Email" required>
+                </div>
+            </div>
+            <div class="form-row">
+                <div class="form-group col-12">
+                    <label for="message">Message</label>
+                    <textarea class="form-control" id="message" name="message" required></textarea>
+                </div>
+            </div>
             <button type="submit">Submit</button>
         </form>
     </div>
